--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -3,4 +3,4 @@ plugin:
     widgets:
       - name: exo_stat
         is_configurable: true
-        is_exportable: true
+        is_exportable: false
